# BinaryTrees

./: CMakeLists.txt  main.cpp
src/: BinaryTree.cpp  BinaryTree.hpp  CMakeLists.txt
tests/: BinaryTreeTests.cpp  CMakeLists.txt
tests/Testing/: TAG
tests/Testing/20230712-1853/: Test.xml
